2010-05-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ff2-http.cpp: Move method into browser-http.inc.

	* ff2-bridge.h: Update to the new HttpRequest API.

2010-05-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ff2-bridge.h: Remove dead code.

2010-03-04  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Makefile.am: Don't link with libmoon, it's statically linked into
	libmoonplugin now.

2010-01-28  Andreia Gaita  <avidigal@novell.com>

	* Makefile.am, ff2-bridge.[h|cpp], ff2-dom.cpp: removed DOM
	code, replaced by plugin-domevents.*

2010-01-25  Andreia Gaita  <avidigal@novell.com>

	* ff2-dom.cpp: NPAPI symbol renaming

2009-12-11  Sebastien Pouliot  <sebastien@ximian.com>

	* ff2-dom.cpp: ff2_get_dom_document can return NULL when we
	navigate away from an SL application. Caller must deal with
	this.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ff2-dom.cpp: Fix uninitialized variable warnings.

	r: andreia

2009-08-17  Andreia Gaita  <avidigal@novell.com>

	* ff2-dom.cpp: don't delete the wrapper, it's refcounted by gecko
	and disposed when RemoveEventListener is called.

	r: toshok

2009-05-27  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ff2-http.cpp:
	* ff2-bridge.h: Updated according to downloader API changes.

2009-05-02  Rusty Howell  <rhowell@novell.com>

	* Makefile.am: Create a different bridge for the xpi

2009-04-06  Andreia Gaita  <avidigal@novell.com>

	* ff2-bridge.h, ff2-dom.cpp: Wrap nsIDOM events as npobj and
	include them in the callback so that they can be referenced later
	from managed. Move some of the common ff2/3 code to ff-common.h

	* Makefile.am: add ff-common.h

2009-03-31  Jb Evain  <jbevain@novell.com>

	* ff2-dom.cpp (HandleEvent): handle key events.

2009-03-30  Andreia Gaita <avidigal@novell.com>

	* ff2-dom.cpp: Fix event registration on window object (the
	wrapper is different, but the object is the same)

2008-12-03  Rolf Bjarne Kvinge <RKvinge@novell.com> 
